force-app/main/default/objects/Requirement_Sheet__c/fields/Sales_Pitch_Deck__c.field-meta.xml
<CustomField>
    <fullName>Sales_Pitch_Deck__c</fullName>
    <inlineHelpText>Client has a professional sales deck to present both digitally and in person.</inlineHelpText>
    <label>Sales Pitch Deck?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>