force-app/main/default/objects/Requirement_Sheet__c/fields/Search_Function_Notes__c.field-meta.xml
<CustomField>
    <fullName>Search_Function_Notes__c</fullName>
    <label>Search Function Notes</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>