force-app/main/default/objects/Requirement_Sheet__c/fields/Service_Specs_Notes__c.field-meta.xml
<CustomField>
    <fullName>Service_Specs_Notes__c</fullName>
    <label>Service Specs Notes</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>