force-app/main/default/objects/Requirement_Sheet__c/fields/Submit__c.field-meta.xml
<CustomField>
    <fullName>Submit__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check When Ready To Send To Agency</inlineHelpText>
    <label>Submit?</label>
    <type>Checkbox</type>
</CustomField>