force-app/main/default/objects/Requirement_Sheet__c/fields/Submitted_Website__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Website__c</fullName>
    <label>Submitted Website</label>
    <type>Url</type>
</CustomField>