force-app/main/default/objects/Requirement_Sheet__c/fields/Time_Impacting__c.field-meta.xml
<CustomField>
    <fullName>Time_Impacting__c</fullName>
    <label>Time Impacting</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>