force-app/main/default/objects/Requirement_Sheet__c/fields/Title_of_Pitch_POC__c.field-meta.xml
<CustomField>
    <fullName>Title_of_Pitch_POC__c</fullName>
    <label>Title of Pitch POC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>