force-app/main/default/objects/Requirement_Sheet__c/fields/Website_has_product_or_service_specs__c.field-meta.xml
<CustomField>
    <fullName>Website_has_product_or_service_specs__c</fullName>
    <label>Website has product or service specs?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unaware</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>