force-app/main/default/objects/Requirement_Sheet__c/fields/What_are_the_next_steps_to_close__c.field-meta.xml
<CustomField>
    <fullName>What_are_the_next_steps_to_close__c</fullName>
    <label>What are the next steps to close?</label>
    <length>6000</length>
    <type>LongTextArea</type>
</CustomField>