force-app/main/default/objects/Requirement_Sheet__c/fields/What_CRM_do_they_use__c.field-meta.xml
<CustomField>
    <fullName>What_CRM_do_they_use__c</fullName>
    <label>What CRM do they use?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>