force-app/main/default/objects/Requirement_Sheet__c/fields/What_is_their_current_revenue__c.field-meta.xml
<CustomField>
    <fullName>What_is_their_current_revenue__c</fullName>
    <label>What is their current revenue?</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>