force-app/main/default/objects/Requirement_Sheet__c/fields/What_is_their_current_Sales_Process__c.field-meta.xml
<CustomField>
    <fullName>What_is_their_current_Sales_Process__c</fullName>
    <label>What is their current Sales Process?</label>
    <length>6000</length>
    <type>LongTextArea</type>
</CustomField>