force-app/main/default/objects/Requirement_Sheet__c/fields/What_is_their_Marketing_Budget__c.field-meta.xml
<CustomField>
    <fullName>What_is_their_Marketing_Budget__c</fullName>
    <label>What is their Marketing Budget?</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>