force-app/main/default/objects/Requirement_Sheet__c/fields/What_is_your_recommended_Annual_Appointm__c.field-meta.xml
<CustomField>
    <fullName>What_is_your_recommended_Annual_Appointm__c</fullName>
    <label>Recommended Annual Appointment Guarantee</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>