force-app/main/default/objects/Requirement_Sheet__c/fields/Who_are_we_targeting__c.field-meta.xml
<CustomField>
    <fullName>Who_are_we_targeting__c</fullName>
    <defaultValue>&quot;Titles: &quot;  +SUBSTITUTE($Label.NewLine, &quot;-&quot;, &quot;&quot;)+
&quot;Square Footage: &quot;+SUBSTITUTE($Label.NewLine, &quot;-&quot;, &quot;&quot;)+
&quot;# Employees :&quot;+SUBSTITUTE($Label.NewLine, &quot;-&quot;, &quot;&quot;)+
&quot;Revenue: &quot;+SUBSTITUTE($Label.NewLine, &quot;-&quot;, &quot;&quot;)+
&quot;Geography :&quot;</defaultValue>
    <label>Who are we targeting?</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>