force-app/main/default/objects/Requirement_Sheet__c/fields/Why_does_the_client_need_a_new_website__c.field-meta.xml
<CustomField>
    <fullName>Why_does_the_client_need_a_new_website__c</fullName>
    <label>Why does the client need a new website?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>