force-app/main/default/objects/Requirement_Sheet__c/fields/Will_you_be_sending_an_agreement__c.field-meta.xml
<CustomField>
    <fullName>Will_you_be_sending_an_agreement__c</fullName>
    <label>Will you be sending an agreement?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>