force-app/main/default/objects/Requirement_Sheet__c/fields/Wordpress_Notes__c.field-meta.xml
<CustomField>
    <fullName>Wordpress_Notes__c</fullName>
    <label>Wordpress Notes</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>