force-app/main/default/objects/Requirement_Sheet__c/fields/X40_Page_Notes__c.field-meta.xml
<CustomField>
    <fullName>X40_Page_Notes__c</fullName>
    <label>40 Page Notes</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>