force-app/main/default/objects/Requirement_Sheet__c/recordTypes/Closed_Business_Bonus_Form.recordType-meta.xml
<RecordType>
    <fullName>Closed_Business_Bonus_Form</fullName>
    <active>true</active>
    <label>Closed Business Bonus Form</label>
</RecordType>