force-app/main/default/objects/Requirement_Sheet__c/recordTypes/Other_Appt_Guarantee.recordType-meta.xml
<RecordType>
    <fullName>Other_Appt_Guarantee</fullName>
    <active>true</active>
    <description>Used in &apos;out of box&apos; approval process - Eric</description>
    <label>Other - Appt Guarantee</label>
</RecordType>