force-app/main/default/objects/Requirement_Sheet__c/recordTypes/Over_Allocated.recordType-meta.xml
<RecordType>
    <fullName>Over_Allocated</fullName>
    <active>true</active>
    <description>Approval Process for SDR&apos;s to receive payment for allocated additional hours.</description>
    <label>Over-Allocated</label>
</RecordType>