force-app/main/default/objects/Requirement_Sheet__c/recordTypes/Pitch_Checklist.recordType-meta.xml
<RecordType>
    <fullName>Pitch_Checklist</fullName>
    <active>true</active>
    <label>Pitch Checklist</label>
</RecordType>