force-app/main/default/objects/Requirement_Sheet__c/recordTypes/Website_Audit.recordType-meta.xml
<RecordType>
    <fullName>Website_Audit</fullName>
    <active>true</active>
    <description>DEACTIVATE THIS. Not being used since 2020 ( as of 5/2023 )</description>
    <label>Website Audit</label>
</RecordType>