force-app/main/default/objects/Requirement_Sheet__c/validationRules/Approval_Details_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Approval_Details_Fields</fullName>
    <active>true</active>
    <description>Only the President or System Admins can edit the fields in this section or change the Approval Status to Approved or Denied.</description>
    <errorConditionFormula>AND(
	OR(
		ISPICKVAL(Approval_Status__c,&apos;Approved&apos;),
		ISPICKVAL(Approval_Status__c,&apos;Denied&apos;),
		ISCHANGED(Number_of_Annual_Appointments_Guaranteed__c),
		ISCHANGED(Approver_Notes__c)),
	AND(
		$User.ProfileId &lt;&gt; &quot;00eA0000000nBcd&quot;,
		$User.UserRoleId &lt;&gt; &quot;00E4A000001H08p&quot;,
		 $User.Id  &lt;&gt; &quot;005G00000073QGe&quot;,
		 RecordTypeId=&quot;0124w000001Yq38&quot;
                ))</errorConditionFormula>
    <errorMessage>You do not have permission to approve or deny the request, nor change the fields in the Approval Details section.</errorMessage>
</ValidationRule>