force-app/main/default/objects/Requirement_Sheet__c/validationRules/Effective_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Effective_Date</fullName>
    <active>false</active>
    <description>Only allow Over Allocation date to be either the first or 15th</description>
    <errorConditionFormula>AND(Effective_Date__c &lt;&gt; DATE(YEAR(TODAY()),MONTH(TODAY()),1),
Effective_Date__c &lt;&gt; DATE(YEAR(TODAY()),MONTH(TODAY()),15))</errorConditionFormula>
    <errorMessage>Please put either the 1st for Full Month duration and 15th for Half Month duration.</errorMessage>
</ValidationRule>