force-app/main/default/objects/Requirement_Sheet__c/validationRules/Submit_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Submit_Required</fullName>
    <active>true</active>
    <description>Submit checkbox required to create website audit.</description>
    <errorConditionFormula>AND($RecordType.Id = &quot;01I4A000002UnwQ&quot;, Submit__c = FALSE)</errorConditionFormula>
    <errorDisplayField>Submit__c</errorDisplayField>
    <errorMessage>Please check Submit field.</errorMessage>
</ValidationRule>