force-app/main/default/objects/Requirement_Sheet__c/validationRules/You_are_not_an_accountant.validationRule-meta.xml
<ValidationRule>
    <fullName>You_are_not_an_accountant</fullName>
    <active>true</active>
    <description>You are not an accountant</description>
    <errorConditionFormula>IF(
	AND(
		Accounting_Processed__c = TRUE,
		$Profile.Name &lt;&gt; &apos;System Administrator&apos;, 
		$Profile.Name &lt;&gt; &apos;Salesforce Admin&apos;,
		$Profile.Name &lt;&gt; &apos;Accounting Generalist&apos;,
		OR(
		RecordTypeId = &quot;0124A000001gz5w&quot;,
		RecordTypeId = &quot;0124w000001Yq3N&quot;
		)
	),
TRUE,
FALSE)</errorConditionFormula>
    <errorMessage>You are not an accountant. You can&apos;t process this record. Please contact John Placht with any concerns.</errorMessage>
</ValidationRule>