force-app/main/default/objects/Requirement_Sheet__c/listViews/All_Website_Audits.listView-meta.xml
<ListView>
    <fullName>All_Website_Audits</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Submit__c</columns>
    <columns>Approved__c</columns>
    <columns>Submitted_Website__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Requirement_Sheet__c.Website_Audit</value>
    </filters>
    <filters>
        <field>Submit__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Website Audits</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>