force-app/main/default/objects/Requirement_Sheet__c/listViews/Eric_Requirements_Sheets.listView-meta.xml
<ListView>
    <fullName>Eric_Requirements_Sheets</fullName>
    <columns>Opportunity__c</columns>
    <columns>Opportunity_Stage__c</columns>
    <columns>NAME</columns>
    <columns>Approval_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Requirement_Sheet__c.Other_Appt_Guarantee</value>
    </filters>
    <label>All - Other Appt Guarantees</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>