force-app/main/default/objects/Requirement_Sheet__c/listViews/Luke_Director_team_closed_biz_approvals.listView-meta.xml
<ListView>
    <fullName>Luke_Director_team_closed_biz_approvals</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>RECORDTYPE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Requirement_Sheet__c.Closed_Business_Bonus_Form</value>
    </filters>
    <filters>
        <field>Approval_Status__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
    <label>Luke Director team closed biz approvals</label>
</ListView>